added whitespace to mapme project

--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class = "container">
-        <div class='row margin-top-4 margin-bottom-4'>
+        <div class='row margin-top-4 margin-bottom-8'>
           <div class='col-half'>
             <div class='project-title'>MapMe</div>
             <div class='project-subtitle'>Grocery shopping, quicker.</div>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="container">
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <img src="../assets/mapme/intro1.jpg" alt="Physical prototype image">
           </div>
@@ -80,14 +80,14 @@
             <img src="../assets/mapme/intro2.png" alt="Interactive prototype image" style='max-height: 80vh'>
           </div>
         </div>
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <p>MapMe is a grocery shopping system integrated with users’ smartphones and shopping carts to help them improve their shopping efficiency and experience.</p>
             <p>MapMe can integrate with any grocery store smartphone app, and users could have a great experience creating a list, syncing with the smart shopping cart, following a responsive “Bird’s-Eye View” map and navigation line to find items, displaying real-time coupon and sale information, and finishing shopping quicker and more enjoyably.</p>
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>Motivation</h2>
             <p>Most people have probably had shopping trips that looked and felt like this:</p>
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h3>User Enactments</h3>
             <img src='../assets/mapme/user enactment.png' alt='User enactment images'>
@@ -141,7 +141,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>Experience Prototype and Results</h2>
             <p>Our prototype is comprised of an interactive Invision prototype to act as the smartphone application, a smart cart with electronics, and physical products and props to simulate a grocery store.</p>
@@ -179,7 +179,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h3>Ideal System Proposal</h3>
             <img src='../assets/mapme/architecture.png' alt='Ideal system proposal architecture infographic'>
