added whitespace to 622 project

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='col-full'>
             <img src='../assets/Autodesk_Consulting/mockup image.png' alt="Revit LT on two floating MacBook mockups">
           </div>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="container">
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Project Summary</h2>
             <p>My team, Corzetti Labs, and I partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They were interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
@@ -80,15 +80,14 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-2'>
           <div class='text-wrapper'>
             <h2>Research Process</h2>
             <p>Below I outlined all the research techniques we used throughout the process, what we learned, and how we applied our findings to later portions of the project.</p>
           </div>
         </div>
 
-        <div class ='row'>
-
+        <div class ='row margin-bottom-4'>
           <div class='col-half'>
             <h3>1. Interaction Map</h3>
             <p>The team started our research creating an interaction map of the help documentation Autodesk provides to users, both online and in the Revit LT software.</p>
@@ -101,6 +100,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/concept map image.svg" alt="Concept map illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>2. User Interviews</h3>
             <p>Next we interviewed architecture software users to build personas that match new Revit LT users. In total we interviewed four people, two students and two professionals, who had a varying levels of Revit LT experience.</p>
@@ -114,6 +115,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/interview image.svg" alt="User interview illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>3. Competitive Evaluation</h3>
             <p>We researched five products we considered direct or partial competitors of Revit LT to compare the online learning materials each company offers. Our evaluation helped find some methods Revit LT could incorporate.</p>
@@ -127,6 +130,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/comp eval image.svg" alt="Competitive evaluation illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>4. Online Survey</h3>
             <p>Our team followed the competitive evaluation up with a survey we distributed to Revit LT users, both university students and professionals. Our goals was to gather opionions about Autodesk’s online help documentation and onboarding materials from a wide audience, as well as demographic details about users, and more general preferences regarding methods of online learning.</p>
@@ -141,6 +146,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/survey image.svg" alt="Online survey illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>5. Heuristic Evaluation</h3>
             <p>Using the 10 usability heuristics from Jakob Nielsen we investigated the information structure and usability of Revit LT’s sources of help documentation. I focused on the help documentation within the software, but also evaluated the online resources and aggregated those findings with my teammates.</p>
@@ -153,6 +160,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/heur eval image.svg" alt="Heuristic evaluation illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>6. Preference Testing</h3>
             <p>Next, our team conducted preference tests to assess user reactions to changes suggested by our survey and heuristic evaluation findings. The tests asked participants to which of two screens they preferred, one the current state of Revit LT’s help documentation and another a mockup our team created with small changes made.</p>
@@ -166,6 +175,8 @@
           <div class='col-half'>
             <img src="../assets/Autodesk_Consulting/preference test image.svg" alt="Preference testing illustration">
           </div>
+        </div>
+        <div class='row margin-bottom-4'>
           <div class='col-half'>
             <h3>7. Usability Testing</h3>
             <p>Based on all our previous research we designed and conducted usability tests to gather first-hand data about how users use Revit LT’s help documentation. We met with five University of Michigan architecture students, sophomore to graduate level, for 30 to 60 minutes, and recorded the test audio and video for further analysis.</p>
@@ -185,7 +196,7 @@
         <!-- <div class='row'>
             <img src="../assets/Autodesk_Consulting/process_flowchart.png" alt="Flowchart for the group project">
         </div> -->
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>Overall Findings</h2>
             <p>At the end of our research we presented our main findings and recommendations to our counterparts at Autodesk. Our main findings were as follows:</p>
@@ -203,6 +214,7 @@
             </ul>
           </div>
         </div>
+        
         <div class='row'>
           <div class='text-wrapper'>
             <h2>Lessons Learned</h2>
