added whitespace to 3DE project

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class='row'>
+        <div class='row margin-bottom-6'>
           <div class='col-full'>
             <img src="../assets/3D_Emergency/mobile_screen_mockup_collage.png" class="img-fluid" alt="Screenshots on generic mockups">
           </div>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="container">
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h3>Inspiration</h3>
             <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
@@ -84,7 +84,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>The New Tools</h2>
 
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <img src="../assets/3D_Emergency/Dispatch_View_Map.gif" class="float-right image-width-hundo" alt="Dispatcher map demo gif">
             <div class='img-caption'>
@@ -125,7 +125,7 @@
           </div>
         </div>
 
-        <div class='row'>
+        <div class='row margin-bottom-4'>
           <div class='photo-array'>
             <img src="../assets/3D_Emergency/Storyboard_1.jpg" alt="Storyboard version 1">
             <img src="../assets/3D_Emergency/Storyboard_2.jpg" alt="Storyboard version 2">
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-          <div class="row">
+          <div class="row margin-bottom-4">
             <div class='text-wrapper'>
               <p>One idea has stuck out to me, because it could solve a problem the 911 call center manager said she hasn't heard a good solution for yet. Figuring out which floor or room of a building you're in isn't something that GPS can help with, and can slow down operators. What if we encoded that information in an easy way for smart phones to process like QR codes? </p>
 
@@ -153,11 +153,11 @@
 
           <div class="row">
             <div class="text-wrapper">
-              <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly</a>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
+              <p>I created personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly</a>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
             </div>
           </div>
 
-          <div class="row">
+          <div class="row margin-bottom-2">
             <div class="text-wrapper">
               <h3>Primary Persona</h3>
               <p>Victoria is visiting her friend's new apartment when an emergency happens. She needs to describe her location as best as she can even though she's never been there before.</p>
@@ -166,7 +166,7 @@
 
           </div>
 
-          <div class="row">
+          <div class="row margin-bottom-4">
             <div class="text-wrapper">
               <h3>Served Persona</h3>
               <p>Vince is 911 dispatcher in a large American city. He frequently needs to find out where a caller is inside of large buildings.</p>
@@ -180,7 +180,7 @@
             </div>
           </div>
 
-          <div class='row'>
+          <div class='row margin-bottom-4'>
             <div class='photo-array'>
               <img src='../assets/3D_Emergency/Slide10.PNG' class='border' alt="Feature analysis 1">
               <img src='../assets/3D_Emergency/Slide11.PNG' class='border' alt="Feature analysis 2">
@@ -191,7 +191,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row margin-bottom-4">
             <div class="text-wrapper">
               <p>I decided to implement the critical feature of scanning QR codes to find location information by:</p>
               <ul>
@@ -202,7 +202,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row margin-bottom-4">
             <div class="text-wrapper">
               <h2>Prototypes and Demos</h2>
               <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
