added button to internship page

--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -50,7 +50,7 @@
         </a>
       </div>
 
-      <button href='#top' onclick="goBackToTop()" class='top-button' title="Back to top">Back to top</button>
+      <button onclick="goBackToTop()" class='top-button' title="Back to top">Back to top</button>
 
       <div class = "container">
         <div class='row margin-top-4 margin-bottom-8'>
