added button to 3de page

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -18,6 +18,7 @@
 
     <!-- sitewide styling -->
     <link rel="stylesheet" type="text/css" href="../styles/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../styles/css/components.css">
     <!-- page-specific styling -->
     <link rel="stylesheet" type="text/css" href="../styles/css/projects.css">
     <link rel="stylesheet" type="text/css" href="../styles/css/3de.css">
@@ -48,6 +49,8 @@
           <i class="fa fa-bars"></i>
         </a>
       </div>
+
+      <button onclick="goBackToTop()" class='top-button' title="Back to top">Back to top</button>
 
       <div class = "container">
         <div class='row margin-top-4 margin-bottom-4'>
@@ -248,6 +251,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--- My JavaScript --->
     <script src="../scripts/myscripts.js"></script>
+    <script src="../scripts/backToTop.js"></script>
 
   </body>
 </html>
