First pass at adding tab for dev projects

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         </div>
 
         <div class='row'>
+          <div class='col-full'>
+            <button onclick='openDesign(event);'>
+              Design
+            </button>
+            <button onclick='openDev(event);'>
+              Development
+            </button>
+          </div>
+        </div>
+
+        <div class='row' id='design-work'>
           <div class='col-half project-card-buffer'>
             <a href='projects/ai_internship.html'>
               <img class='thumbnail' src='assets/Thumbnails/internship thumbnail.png'>
@@ -72,6 +83,14 @@
           <div class='col-half'>
             <a href='projects/3D_Emergency.html'>
               <img class='thumbnail' src='assets/Thumbnails/3de_thumbnail.png'>
+            </a>
+          </div>
+        </div>
+
+        <div class='row' id='dev-work' style='display: none;'>
+          <div class='col-half project-card-buffer'>
+            <a href='projects/GoodListens.html'>
+              <img class='thumbnail' src='assets/Thumbnails/mapme thumbnail.png'>
             </a>
           </div>
         </div>
