Added goodlistens header

--- a/projects/GoodListens.html
+++ b/projects/GoodListens.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/css/components.css">
     <!-- page-specific styling -->
     <link rel="stylesheet" type="text/css" href="../styles/css/projects.css">
-    <link rel="stylesheet" type="text/css" href="../styles/css/mapme.css">
+    <link rel="stylesheet" type="text/css" href="../styles/css/goodlistens.css">
 
     <!-- Typefaces -->
     <link rel="stylesheet" href="https://use.typekit.net/faz2ajf.css">
@@ -29,7 +29,7 @@
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>MapMe</title>
+    <title>GoodListens</title>
 
   </head>
 
@@ -55,23 +55,18 @@
       <div class = "container">
         <div class='row margin-top-4 margin-bottom-8'>
           <div class='col-half'>
-            <div class='project-title'>MapMe</div>
-            <div class='project-subtitle'>Grocery shopping, quicker.</div>
+            <div class='project-title'>GoodListens</div>
+            <div class='project-subtitle'>Make sense of the noise.</div>
           </div>
           <div class='col-half'>
-            <p>A group project to improve grocery shopping using pervasive interaction design methods.</p>
+            <p>A group project to help podcast listeners track what they listen to and discover new content they love.</p>
             <div class='project-details'>
-              <p>User Researcher / Prototyper / Project Manager</p>
-              <p>Cultural Probes / User Enactments / Paper and Physical Prototyping</p>
-              <p>Sep. - Dec. 2019</p>
+              <p>UX Designer / React Native Developer</p>
+              <p>React Native / Firestore</p>
+              <p>Dec. 2019</p>
             </div>
           </div>
         </div>
-        <!-- <div class='row'>
-          <div class='col-full'>
-            <img src='../assets/mapme/Branding_Guidelines.jpg' alt="MapMe Branding Guidelines">
-          </div>
-        </div> -->
       </div>
 
       <div class="container">
