Further additions to GL page

--- a/projects/GoodListens.html
+++ b/projects/GoodListens.html
@@ -71,137 +71,37 @@
 
       <div class="container">
         <div class='row margin-bottom-4'>
-          <div class='col-half'>
-            <img src="../assets/mapme/intro1.jpg" alt="Physical prototype image">
-          </div>
-          <div class='col-half'>
-            <img src="../assets/mapme/intro2.png" alt="Interactive prototype image" style='max-height: 80vh'>
+          <div class='col-full'>
+            <iframe width="1110" height="624" src="https://www.youtube.com/embed/k6NPlPaDdiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
-            <p>MapMe is a grocery shopping system integrated with users’ smartphones and shopping carts to help them improve their shopping efficiency and experience.</p>
-            <p>MapMe can integrate with any grocery store smartphone app, and users could have a great experience creating a list, syncing with the smart shopping cart, following a responsive “Bird’s-Eye View” map and navigation line to find items, displaying real-time coupon and sale information, and finishing shopping quicker and more enjoyably.</p>
+            <p>GoodListens is designed for avid podcast listeners who want to track what they and their friends listen to each day. Just like books, today there are far too many podcasts being produced for one person to consume them all. By tracking the podcasts you listen to you can create a log to reference later, and by following friends you can see what podcasts they like and find new favorites! The app is a simple and powerful tool to hone in on the podcast content you love.</p>
           </div>
         </div>
 
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
-            <h2>Motivation</h2>
-            <p>Most people have probably had shopping trips that looked and felt like this:</p>
-            <img src='../assets/mapme/messy route.jpg' alt='Back tracking in the grocery store'>
-            <p>We observed that shoppers are usually <span style='font-weight: bold;'>crisscrossing grocery stores while shopping.</span> The reason, of course, is because they have <span style='font-weight: bold;'>difficulty finding every last item</span> or forgetting to pick up items along their way. If shoppers are not familiar with the grocery store, it will take much more time to find items.</p>
-
-            <p>A recent Gallup Poll shows that 82% of US adults go grocery shopping in a grocery store at least once a week (Jones, 2019). Through our research and interviews during our design process, we also found that relatively <span style='font-weight: bold;'>everyone wants to see coupons and sales information while they shop.</span> When all these ideas present, it was an excellent opportunity for us to find a better solution to help improve grocery shopping efficiency.</p>
+            <h2>Inspiration</h2>
           </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h2>Formative Study and Results</h2>
-            <p>To better understand our possible design solution and narrow down our target audience, we used the following methods and timeline to realize the design of our product.</p>
-            <img src='../assets/mapme/formative study.png' alt='Formative study timeline'>
-            <p>Our group engaged in an iterative design process to explore various concepts by utilizing different research methods, such as a culture probe and user enactments, before generating our final physical prototype. Below are the fundamental processes and results in our design.</p>
+          <div class='col-half'>
+            <div style='display: flex; flex-direction: row;'>
+              <img src='../assets/goodlistens/goodreads_1.png' alt='Back tracking in the grocery store'>
+              <img src='../assets/goodlistens/goodreads_2.png' alt='Back tracking in the grocery store'>
+            </div>
+            <p>GoodReads</p>
           </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h3>Observations</h3>
-            <p>The most important finding in our observation was that many shoppers seem to backtrack, walk in circles, or zigzag across the store as they fill up their carts, which is not very efficient. This helped validate our initial motivations for the design. For more details of our observations, read our <a href='https://612-smartcart.github.io/post-1/index.html' target='_blanket'>Milestone 1 update.</a></p>
-          </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h3>Cultural Probe</h3>
-            <img src='../assets/mapme/cultural probe.png' alt='Cultural probe activity booklet pages'>
-            <p>We created a cultural probe to better understand participants’ experience in the grocery store. We asked participants to complete three parts: creating a photo journal during a shopping trip, completing an activity booklet after a trip, and completing a follow-up interview with our team. After sharing notes and insights we gathered from each activity book and follow-up interview, our group got two main results.</p>
-            <ul>
-              <li>Participants were not worried about finding something because they usually visit same grocery store and also comfortable asking for directions if they can’t find something.</li>
-              <li>Participants would like to know if something they want to buy is out of stock.</li>
-            </ul>
-            <p>These results helped to better define our target audience and shift the direction of our design. Rather than a turn-by-turn GPS-like system, we’re focusing on showing shoppers where items on their list are as they move through stores. For more details of our cultural probe, read our <a href='https://612-smartcart.github.io/milestone-2/index.html' target='_blanket'> Milestone 2 update.</a></p>
+          <div class='col-half'>
+            <img src='../assets/goodlistens/spotify.png' alt='Back tracking in the grocery store'>
+            <p>Spotify Year Wrapped playlists</p>
           </div>
         </div>
 
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
-            <h3>User Enactments</h3>
-            <img src='../assets/mapme/user enactment.png' alt='User enactment images'>
-            <p>Before conducting our user enactments, we listed several research questions regarding interface preference, navigation method, substitute suggestions and so on, to focus our research and better design and experiment with user enactments. We also chose five scenarios to simulate for shedding light on potential design opportunities.</p>
-            <p>Based on the results of user enactments and notes we collected from the follow-up interview, we received six key insights, and we chose the two most important insights list below as our key feature in our later prototype.</p>
-            <ul>
-              <li>Participants prefer the simplistic birds-eye view of the store with markers for list items, rather than turn-by-turn navigation to each item, and a search bar/item look-up with the phone as an interface.</li>
-              <li>Participants were eager to see a coupon system integrated with application list that offers personalized discounts when at the store.</li>
-            </ul>
-            <p>At this point, we had refined our design down to a specific system based on what we learned from our user enactments and previous milestones. We also identified the user’s interaction methods with the system and how it will fit into our audience’s grocery shopping routine. For more details of our user enactments, read our <a href='https://612-smartcart.github.io/milestone-3/index.html' target='_blanket'> Milestone 3 update.</a></p>
-          </div>
-        </div>
-
-        <div class='row margin-bottom-4'>
-          <div class='text-wrapper'>
-            <h2>Experience Prototype and Results</h2>
-            <p>Our prototype is comprised of an interactive Invision prototype to act as the smartphone application, a smart cart with electronics, and physical products and props to simulate a grocery store.</p>
-            <img src='../assets/mapme/prototype1.png' alt='Prototype 1 image'>
-            <img src='../assets/mapme/prototype2.png' alt='Prototype 2 image'>
-            <p>For the user interface screen, we created a mockup to help improve users’ interaction with our product. The basic interaction within are creating a list, syncing with the smart cart, viewing the store floor plan, and coupon notifications. For the smart cart, we put all components in a box on the shopping cart, and the LED light will change to green to indicate a successful connection between the phone and cart. The light is controlled by a Particle photon microcontroller in the box, and we wrote C++ code to turn the light on and off for our demo. Our prototypes cover many aspects of the real shopping experience for users.</p>
-            <p>After we conducted the demo with these prototypes, our classmates were mostly concerned about privacy, which is a common issue that almost every application faces. How to protect users’ information and gain users’ trust is essential for every product, and is something this design needs to consider closely.</p>
-          </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h2>Final System Concept</h2>
-            <img src='../assets/mapme/key feature.png' alt='Final system key features'>
-          </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h3>Key Features</h3>
-            <ul>
-              <li>List Creation: MapMe allows users to create or add to a shopping list at any time.</li>
-              <li>QR Code: MapMe lets users scan a QR code to pair their phone with a smart shopping cart which has a Bluetooth sensor in it.</li>
-              <li>“Bird’s-Eye” view: after syncing with the cart, the users’ phone interface will show the location of all the items that users added in their list as well as the user themselves.</li>
-              <li>Coupon Integration: MapMe will automatically integrate coupons with the list so that users could see if there is any discount on the items they’re buying.</li>
-              <li>Navigation: MapMe will give users navigation lines towards items, but only when users ask for it.</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h3>Demonstration Video</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/eHc_DfQ_DlY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class='row margin-bottom-4'>
-          <div class='text-wrapper'>
-            <h3>Ideal System Proposal</h3>
-            <img src='../assets/mapme/architecture.png' alt='Ideal system proposal architecture infographic'>
-            <p>The final proposed system consists of a sensor network that integrates with existing grocery store smartphone applications. Users pair their phone with a shopping cart by scanning the unique QR code on the cart, which establishes a Bluetooth connection. A network of indoor positioning sensors throughout the store will communicate with the hardware on cart with iBeacon technology. The cart communicates with the users phone via Bluetooth to show their location and where all the items are on their list on a bird’s-eye-view floor plan of the store.</p>
-            <p>This product would be sold to grocery store chains, Meijer in the example above, rather than exist as a standalone app for users to download. We would work with them to integrate our location-finding technology into their existing smartphone app, implement our sensor networks throughout their stores, and map their floor plans.</p>
-          </div>
-        </div>
-
-        <div class='row'>
-          <div class='text-wrapper'>
-            <h2>Reflection</h2>
-            <p>We learned a lot about how people shop for items in grocery stores during this design process. We feel like we incorporated well what our research taught us, but there are certainly limitations to this design and areas that could be improved or further explored.</p>
-            <h3>Design Limitations</h3>
-            <p>Currently, this design requires users to own and use a smartphone to use this item-finding system. This is something we tried to avoid at the beginning of our design process, but our research led us to a smartphone-centric design.</p>
-            <p>Additionally, privacy remains a concern with a system like this. We gave users a clear and explicit way to disconnect their phone from the grocery cart, but users are also being tracked every step of the way through the store. Further research is required to see how much this bothers our target users.</p>
-            <p>When it came down to considering different system architecture and what our product could look or function like, we considered ingraining privacy in the conceptual design of the product. During a storming session we questioned whether we actually needed the cart. Ultimately we decided that the cart acts as a sort of conduit so that the dozens of beacons across the store aren’t all connecting with the phone. We believed that this adds an extra layer of security. We believe that the cart-to-phone data exchange will include built in encryption/anonymization so the person’s identity isn’t directly connected and collected with the cart’s location information.</p>
-            <p>This system also depends on how well a network of indoor positioning sensors can support a large number of users in a small space. For the sake of this project we are assuming that will work. However, our next steps should be to build the network we’re imagining and perform stress tests. How many users can it support in a large area? A small area? How many sensors are needed? How precisely can we calculate the user’s location?</p>
-            <h3>Demo Insights</h3>
-            <p>While preparing and performing the demo we learned that users might be nervous about leaving their phones mounted on their grocery cart. They imagined it would be easy to steal while they’re distracted. The next physical prototype needs to include some sort of security device to ease those worries.</p>
-            <h3>If we did it all again</h3>
-            <p>Overall, we believe this research process could have benefitted from a more thorough competitive analysis, or more research into technology that’s currently being used in shopping situations more generally. Additionally, we lacked strong evidence for making claims about our users because our sample sizes were small. Gathering more initial data through a survey would have given us a better picture of our target users, and would have served as a nice way to collect contact info for our future research methods.</p>
-            <hr>
-            <h4>Sources</h4>
-            <p>Jones, J. & Kashanchi, S. (August 20, 2019). Online Grocery Shopping Still Rare in U.S. Retrieved December 6, 2019, from <a href='https://news.gallup.com/poll/264857/online-grocery-shopping-rare.aspx' target='_blank'>https://news.gallup.com/poll/264857/online-grocery-shopping-rare.aspx</a></p>
+            <h2>Development Timeline</h2>
+            <p>My group had less than three weeks to design, implement, and present this mobile app for our final project. We implemented the user interface with React Native, and stored all the necessary data in a noSQL database powered by Google’s Firebase.</p>
           </div>
         </div>
 
