Further additions to GLproject

--- a/projects/GoodListens.html
+++ b/projects/GoodListens.html
@@ -100,8 +100,10 @@
 
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
-            <h2>Development Timeline</h2>
-            <p>My group had less than three weeks to design, implement, and present this mobile app for our final project. We implemented the user interface with React Native, and stored all the necessary data in a noSQL database powered by Google’s Firebase.</p>
+            <h2>Development Process</h2>
+            <p>My group had less than three weeks to design, implement, and present this mobile app for our final project. This forced us to make quick decisions and to aggresively prioritize the features we implemented. We implemented the user interface with React Native, and stored all the necessary data in a noSQL database powered by Google’s Firebase.</p>
+            <p>With our feature list implemented we created some rough mockups to agree on the screens our app would need.</p>
+            <img src='../assets/goodlistens/mockups.png'>
           </div>
         </div>
 
